--- a/elements.html
+++ b/elements.html
@@ -52,21 +52,21 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about-us.html">会社概要</a></li>
-                        <li class="nav-item"><a class="nav-link" href="service.html">事業内容</a></li>
-                        <li class="nav-item"><a class="nav-link" href="portfolio.html">マンション経営</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.php">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about-us.php">会社概要</a></li>
+                        <li class="nav-item"><a class="nav-link" href="service.php">事業内容</a></li>
+                        <li class="nav-item"><a class="nav-link" href="portfolio.php">マンション経営</a></li>
                         <li class="nav-item dropdown submenu active">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Blog
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                                <li class="nav-item active"><a class="nav-link" href="elements.html">Elements</a></li>
+                                <li class="nav-item"><a class="nav-link" href="blog.php">Blog</a></li>
+                                <li class="nav-item"><a class="nav-link" href="single-blog.php">Blog Details</a></li>
+                                <li class="nav-item active"><a class="nav-link" href="elements.php">Elements</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.php">Contact</a></li>
                     </ul>
                 </div>
             </nav>
