--- a/elements.html
+++ b/elements.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -53,9 +53,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="index.php">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about-us.php">会社概要</a></li>
-                        <li class="nav-item"><a class="nav-link" href="service.php">事業内容</a></li>
-                        <li class="nav-item"><a class="nav-link" href="portfolio.php">マンション経営</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-aboutus">会社概要</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-service">事業内容</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-portfolio">マンション経営</a></li>
                         <li class="nav-item dropdown submenu active">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Blog
@@ -66,7 +66,7 @@
                                 <li class="nav-item active"><a class="nav-link" href="elements.php">Elements</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="contact.php">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page-contact">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -427,4 +427,4 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         <script src="js/circle-active.js"></script>
         <script src="js/theme.js"></script>
     </body>
-</html>
+</html> -->
