--- a/single-blog.html
+++ b/single-blog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -53,7 +53,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about-us.html">会社概要</a></li>
+                        <li class="nav-item"><a class="nav-link" href="aboutus.html">会社概要</a></li>
                         <li class="nav-item"><a class="nav-link" href="service.html">事業内容</a></li>
                         <li class="nav-item"><a class="nav-link" href="portfolio.html">マンション経営</a></li>
                         <li class="nav-item dropdown submenu active">
@@ -359,4 +359,4 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         <script src="js/circle-active.js"></script>
         <script src="js/theme.js"></script>
     </body>
-</html>
+</html> -->
